exports[`test Menu demo 1`] = `
<ul
  className=" wl-menu  wl-menu-root  wl-menu-inline">
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item1
  </li>
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item2
  </li>
</ul>
`;

exports[`test Menu demo 2`] = `
<ul
  className=" wl-menu  wl-menu-root  wl-menu-inline">
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item1
  </li>
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item2
  </li>
  <li
    className="wl-menu-submenu wl-menu-submenu-inline">
    <div
      className="wl-menu-submenu-title"
      onClick={[Function]}>
      subMenu
    </div>
    <ul
      className="wl-menu wl-menu-sub">
      <li
        className="wl-menu-item wl-menu-item-selected"
        onClick={[Function]}>
        item3
      </li>
    </ul>
  </li>
</ul>
`;

exports[`test Menu demo 3`] = `
<ul
  className=" wl-menu  wl-menu-root  wl-menu-inline">
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item1
  </li>
  <li
    className="wl-menu-item"
    onClick={[Function]}>
    item2
  </li>
  <li
    className="wl-menu-submenu wl-menu-submenu-inline">
    <div
      className="wl-menu-submenu-title"
      onClick={[Function]}>
      subMenu
    </div>
    <ul
      className="wl-menu wl-menu-sub">
      <li
        className="wl-menu-item wl-menu-item-selected"
        onClick={[Function]}>
        item3
      </li>
      <li
        className="wl-menu-submenu wl-menu-submenu-inline">
        <div
          className="wl-menu-submenu-title"
          onClick={[Function]}>
          subMenu2
        </div>
        
      </li>
    </ul>
  </li>
</ul>
`;
